pre-commit hooks n stuff
